Requires:
~~~~~~~~~
- lxml > 0.7
New features:
~~~~~~~~~~~~~
- back to mutliple layers on UI side.
- remove elementtree compatibility
- Extend the map context so that it can display layer style graphic
legends.
- Better errors returned to user in ZMI when the url for a map is incorrect
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Better capability requests handler