@@ -149,16 +149,6 @@ map_document_layout = {
                 'display_width': 3,
             },
         },
-        'sort_by': {
-            'type': 'Select Widget',
-            'data': {
-                'fields': ['sort_by'],
-                'is_i18n': 1,
-                'label_edit': 'label_sort_by',
-                'vocabulary': 'search_sort_results_by',
-                'translated': 1,
-                },
-            },
         'query_status': {
             'type': 'Select Widget',
             'data': {
@@ -190,9 +180,129 @@ map_document_layout = {
                 'widget_ids': ['query_fulltext',
                                'query_title', 'query_description',
                                'query_status', 'query_portal_type',
-                               'folder', 'nb_items', 'sort_by'],
+                               'folder', 'nb_items'],
                 },
-            }, 
+            },
+        'hide_locator': {
+            'type': 'CheckBox Widget',
+            'data': {
+                'title': '',
+                'fields': ('hide_locator',),
+                'is_required': False,
+                'label': 'label_cpsgeo_hide_locator',
+                'label_edit': 'label_cpsgeo_hide_locator',
+                'description': '',
+                'help': '',
+                'is_i18n': True,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('view',),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': False,
+                'hidden_if_expr': '',
+                'widget_mode_expr': '',
+                'css_class': '',
+                'css_class_expr': '',
+                'javascript_expr': '',
+                'display_true': 'Yes',
+                'display_false': 'No',
+            },
+        },
+        'hide_layers': {
+            'type': 'CheckBox Widget',
+            'data': {
+                'title': '',
+                'fields': ('hide_layers',),
+                'is_required': False,
+                'label': 'label_cpsgeo_hide_layers',
+                'label_edit': 'label_cpsgeo_hide_layers',
+                'description': '',
+                'help': '',
+                'is_i18n': True,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('view',),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': False,
+                'hidden_if_expr': '',
+                'widget_mode_expr': '',
+                'css_class': '',
+                'css_class_expr': '',
+                'javascript_expr': '',
+                'display_true': 'Yes',
+                'display_false': 'No',
+            },
+        },
+        'hide_buttons': {
+            'type': 'CheckBox Widget',
+            'data': {
+                'title': '',
+                'fields': ('hide_buttons',),
+                'is_required': False,
+                'label': 'label_cpsgeo_hide_buttons',
+                'label_edit': 'label_cpsgeo_hide_buttons',
+                'description': '',
+                'help': '',
+                'is_i18n': True,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('view',),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': False,
+                'hidden_if_expr': '',
+                'widget_mode_expr': '',
+                'css_class': '',
+                'css_class_expr': '',
+                'javascript_expr': '',
+                'display_true': 'Yes',
+                'display_false': 'No',
+            },
+        },
+        'hide_scale_box': {
+            'type': 'CheckBox Widget',
+            'data': {
+                'title': '',
+                'fields': ('hide_scale_box',),
+                'is_required': False,
+                'label': 'label_cpsgeo_hide_scale_box',
+                'label_edit': 'label_cpsgeo_hide_scale_box',
+                'description': '',
+                'help': '',
+                'is_i18n': True,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('view',),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': False,
+                'hidden_if_expr': '',
+                'widget_mode_expr': '',
+                'css_class': '',
+                'css_class_expr': '',
+                'javascript_expr': '',
+                'display_true': 'Yes',
+                'display_false': 'No',
+            },
+        },
+        'hide_cursor_track': {
+            'type': 'CheckBox Widget',
+            'data': {
+                'title': '',
+                'fields': ('hide_cursor_track',),
+                'is_required': False,
+                'label': 'label_cpsgeo_hide_cursor_track',
+                'label_edit': 'label_cpsgeo_hide_cursor_track',
+                'description': '',
+                'help': '',
+                'is_i18n': True,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('view',),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': False,
+                'hidden_if_expr': '',
+                'widget_mode_expr': '',
+                'css_class': '',
+                'css_class_expr': '',
+                'javascript_expr': '',
+                'display_true': 'Yes',
+                'display_false': 'No',
+            },
+        },
     },
     'layout': {
         'style_prefix': 'layout_default_',
@@ -205,6 +315,16 @@ map_document_layout = {
         'rows': [
             [{'widget_id': 'map_id', 'ncols': 1},
             ],
+            [{'widget_id': 'hide_locator', 'ncols': 1},
+            ],
+            [{'widget_id': 'hide_layers', 'ncols': 1},
+            ],
+            [{'widget_id': 'hide_buttons', 'ncols': 1},
+             ],
+            [{'widget_id': 'hide_scale_box', 'ncols': 1},
+             ],
+            [{'widget_id': 'hide_cursor_track', 'ncols': 1},
+             ],
             [{'widget_id': 'map_rendering', 'ncols': 1}, 
             ],
             [{'widget_id': 'search', 'ncols': 1},
