@@ -187,9 +187,98 @@ map_document_schema = {
             'write_process_expr': '',
         },
     },
-    'sort_by': {'type': 'CPS String Field', 'data': {}},
     'query_status': {'type': 'CPS String Field', 'data': {}},
     'query_portal_type': {'type': 'CPS String List Field', 'data': {}},
+    'hide_locator': {
+        'type': 'CPS Boolean Field',
+        'data': {
+            'default_expr': 'python:False',
+            'is_searchabletext': 0,
+            'acl_read_permissions': '',
+            'acl_read_roles': '',
+            'acl_read_expr': '',
+            'acl_write_permissions': '',
+            'acl_write_roles': '',
+            'acl_write_expr': '',
+            'read_ignore_storage': 0,
+            'read_process_expr': '',
+            'read_process_dependent_fields': (),
+            'write_ignore_storage': 0,
+            'write_process_expr': '',
+        },
+    },
+    'hide_layers': {
+        'type': 'CPS Boolean Field',
+        'data': {
+            'default_expr': 'python:False',
+            'is_searchabletext': 0,
+            'acl_read_permissions': '',
+            'acl_read_roles': '',
+            'acl_read_expr': '',
+            'acl_write_permissions': '',
+            'acl_write_roles': '',
+            'acl_write_expr': '',
+            'read_ignore_storage': 0,
+            'read_process_expr': '',
+            'read_process_dependent_fields': (),
+            'write_ignore_storage': 0,
+            'write_process_expr': '',
+        },
+    },
+    'hide_buttons': {
+        'type': 'CPS Boolean Field',
+        'data': {
+            'default_expr': 'python:False',
+            'is_searchabletext': 0,
+            'acl_read_permissions': '',
+            'acl_read_roles': '',
+            'acl_read_expr': '',
+            'acl_write_permissions': '',
+            'acl_write_roles': '',
+            'acl_write_expr': '',
+            'read_ignore_storage': 0,
+            'read_process_expr': '',
+            'read_process_dependent_fields': (),
+            'write_ignore_storage': 0,
+            'write_process_expr': '',
+        },
+    },
+    'hide_scale_box': {
+        'type': 'CPS Boolean Field',
+        'data': {
+            'default_expr': 'python:False',
+            'is_searchabletext': 0,
+            'acl_read_permissions': '',
+            'acl_read_roles': '',
+            'acl_read_expr': '',
+            'acl_write_permissions': '',
+            'acl_write_roles': '',
+            'acl_write_expr': '',
+            'read_ignore_storage': 0,
+            'read_process_expr': '',
+            'read_process_dependent_fields': (),
+            'write_ignore_storage': 0,
+            'write_process_expr': '',
+            },
+        },
+    'hide_cursor_track': {
+        'type': 'CPS Boolean Field',
+        'data': {
+            'default_expr': 'python:False',
+            'is_searchabletext': 0,
+            'acl_read_permissions': '',
+            'acl_read_roles': '',
+            'acl_read_expr': '',
+            'acl_write_permissions': '',
+            'acl_write_roles': '',
+            'acl_write_expr': '',
+            'read_ignore_storage': 0,
+            'read_process_expr': '',
+            'read_process_dependent_fields': (),
+            'write_ignore_storage': 0,
+            'write_process_expr': '',
+        },
+    },
 }
 
 dict = {}
