@@ -1,5 +1,9 @@
-<metal:block define-macro="layers">
-  <div>
+<metal:block define-macro="layers"
+	     tal:define="hide_layers here/hide_layers|python:False">
+  <div tal:condition="hide_layers" style="visibility:hidden">
+    <div id="legend" style="width: 200px; height: 400px; overflow: scroll;" />
+  </div>
+  <div tal:condition="not:hide_layers">
     <div id="legend" style="width: 200px; height: 400px; overflow: scroll;" />
   </div>
 </metal:block>
