@@ -1,29 +1,30 @@
 <metal:block define-macro="map_selector"
 	     tal:define="global current_map_id here/map_id|nothing;
 			 current_map_context python:current_map_id and here.portal_maps.mapContextFor(current_map_id) or {}">
-<div style="padding:10px">
-  <span tal:condition="not:current_map_context"
-	i18n:translate="label_cpsgeo_select_base_map">
+<div style="padding:10px" tal:condition="not:current_map_context">
+  <span i18n:translate="label_cpsgeo_select_base_map">
     Select base map
   </span>
   <form id="map_selector">
     <select name=map onChange="switch_map()">
-      <option tal:condition="not:current_map_context"
-	      value=""
+      <option value=""
 	      i18n:translate="label_cpsgeo_choose_map">
 	--- Choose Map ---
       </option>
-      <div tal:condition="not:current_map_context"
-	   tal:repeat="map here/portal_maps/mapContexts">
+      <div tal:repeat="map here/portal_maps/mapContexts">
 	<option tal:attributes="value map/path"
 		tal:content="map/title">title
 	</option>
       </div>
-      <div tal:condition="current_map_context">
-	<option tal:attributes="value current_map_context/path" selected="1"
-		tal:content="current_map_context/title">title
-	</option>
-      </div>
+    </select>
+  </form>
+</div>
+<div style="padding:10px; visibility:hidden" tal:condition="current_map_context">
+  <form id="map_selector">
+    <select name=map onChange="switch_map()">
+      <option tal:attributes="value current_map_context/path" selected="1"
+	      tal:content="current_map_context/title">title
+      </option>
     </select>
   </form>
 </div>
